--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                 <br><br>
 
                 <h4 id="sound_detected"></h4>
+
+                <br> <br> <br>
+
+                <img id="animal_image"> 
             </div>
         </center>
     </body>
